adding bug fixes and improving the structure

--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
     <!-- Font -> Roboto Condensed: 300; 400; 700  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barriecito&family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
     <!-- Título da página-->
     <title>To-do List</title>
 </head>
 <body>
     <!-- To-do list -->
+    <h1>
+        My To-Do
+    </h1>
     <div id="container-main">
 
         <!-- Local onde irá ter o input do novo to-do e o botão com evento para adicionar -->
