--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barriecito&family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
 
-
+    <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
-    <!-- Título da página-->
-    <title>To-do List</title>
+    <!-- Título da página -->
+    <title>Code Tasks</title>
 </head>
 <body>
     <!-- To-do list -->
     <h1>
-        My To-Do
+        Code Tasks
     </h1>
     <div id="container-main">
 
